create github pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             
 
-            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link text-primary" href="#top">Home</a></li><li class="nav-item"><a class="nav-link text-primary" href="#top">About</a></li><li class="nav-item"><a class="nav-link text-primary" href="#top">Contact</a></li></ul>
+            <ul class="nav navbar-nav pull-xs-right"><li class="nav-item"><a class="nav-link text-primary" href="#top">Home</a></li></ul>
         </div>
     </div>
 </nav>
@@ -56,7 +56,7 @@
 
                 <div data-form-alert="true"><div hidden="" data-form-alert-success="true">Thanks for filling out form!</div></div>
                 <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Sign up for early access">
-                    <input type="hidden" value="FxctKJRdri0SVjEReGwUZSSGy8wTxWGyTKMUwdPpPOxIpkciU/0rUrjNOr/B5bY+zMb8Rvc/ojHO27zHaDPxmdohdO6Y4Dy7EkKP9/vfaEluRXLRfgPLZGslZnCY0l0P" data-form-email="true">
+                    <input type="hidden" value="p2DqWpgcNfq+PecIADiYeAolYG8/UsvHyw7xzo+tcjvm1u7QLfT4x/QrtmVwEm3+tcfvqvchrgCaLo1ZOLaxMd7kziMPdFBptQTIvA/NLZptZudIq0nWDHsgjbkJRxNL" data-form-email="true">
                     <div class="input-group">
                         <input type="email" class="form-control" name="email" required="" placeholder="Enter Your Email Address..." data-form-field="Email">
                         <span class="input-group-btn"><button type="submit" class="btn btn-black">Add me</button></span>
